<resources>
    <string name="app_name">Dice Roller</string>
    <string name="result">Results</string>
    <string name="rollNumber">Enter a number of times to roll:</string>
    <string name="roll">Roll</string>
    <string name="Custom_Dice">Custom Dice (Ex. 36)</string>
    <string name="add">Add</string>
    <string name="history">History</string>
    <string name="_1">1</string>
    <string-array name="numberOfDice">
        <item>Dice List \u25BC</item>
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D16</item>
        <item>D20</item>
        <item>D100</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>